--- a/.github/workflows/data-analyzer.yml
+++ b/.github/workflows/data-analyzer.yml
@@ -3,7 +3,7 @@ name: Deploy to Heroku (data-analyzer)
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - "data-analyzer/**"
       - ".github/workflows/data-analyzer.yml"
