--- a/.github/workflows/data-collector.yml
+++ b/.github/workflows/data-collector.yml
@@ -16,5 +16,5 @@ jobs:
       - name: Add backend remote origin
         run: git remote add heroku-collector https://heroku:${{ secrets.HEROKU_API_TOKEN }}@git.heroku.com/${{ secrets.HEROKU_COLLECTOR_APP_NAME }}.git
       - name: Deploy backend to Heroku
-        run: git push heroku-collector `git subtree split --prefix data-collector master`:refs/heads/master --force
+        run: git push heroku-collector `git subtree split --prefix data-collector main`:refs/heads/main --force
 
