--- a/.github/workflows/data-collector.yml
+++ b/.github/workflows/data-collector.yml
@@ -18,6 +18,7 @@ jobs:
           python-version: '3.x'
       - name: Install dependencies
         run: |
+          pwd
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Test with pytest
