--- a/.github/workflows/data-collector.yml
+++ b/.github/workflows/data-collector.yml
@@ -14,7 +14,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2  
       - uses: actions/setup-python@v2  
-      - run: pip install -r requirements.txt 
+      - run: |
+          cd data-collector
+          pip install -r requirements.txt 
       - uses: actions/checkout@v2
       - name: Add backend remote origin
         run: git remote add heroku-collector https://heroku:${{ secrets.HEROKU_API_TOKEN }}@git.heroku.com/${{ secrets.HEROKU_COLLECTOR_APP_NAME }}.git
