--- a/.github/workflows/data-collector.yml
+++ b/.github/workflows/data-collector.yml
@@ -17,6 +17,7 @@ jobs:
       - run: |
           cd data-collector
           pip install -r requirements.txt 
+          pip install pytest
       - uses: actions/checkout@v2
       - name: Add backend remote origin
         run: git remote add heroku-collector https://heroku:${{ secrets.HEROKU_API_TOKEN }}@git.heroku.com/${{ secrets.HEROKU_COLLECTOR_APP_NAME }}.git
