--- a/.github/workflows/data-collector.yml
+++ b/.github/workflows/data-collector.yml
@@ -18,6 +18,7 @@ jobs:
           cd data-collector
           pip install -r requirements.txt 
           pip install pytest
+          pytest
       - uses: actions/checkout@v2
       - name: Add backend remote origin
         run: git remote add heroku-collector https://heroku:${{ secrets.HEROKU_API_TOKEN }}@git.heroku.com/${{ secrets.HEROKU_COLLECTOR_APP_NAME }}.git
