--- a/.github/workflows/data-analyzer.yml
+++ b/.github/workflows/data-analyzer.yml
@@ -12,6 +12,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2  
+      - uses: actions/setup-python@v2  
+      - run: |
+          cd data-collector
+          pip install -r requirements.txt 
+          pip install pytest
+          pytest
       - uses: actions/checkout@v2
       - name: Add backend remote origin
         run: git remote add heroku-analyzer https://heroku:${{ secrets.HEROKU_API_TOKEN }}@git.heroku.com/${{ secrets.HEROKU_ANALYZER_APP_NAME }}.git
