--- a/data-analyzer/requirements.txt
+++ b/data-analyzer/requirements.txt
@@ -2,18 +2,23 @@ blinker==1.7.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
+exceptiongroup==1.2.0
 Flask==3.0.0
 gunicorn==21.2.0
 idna==3.6
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.3.2
 MarkupSafe==2.1.3
 nltk==3.8.1
 packaging==23.2
+pluggy==1.3.0
+pytest==7.4.3
 regex==2023.10.3
 requests==2.31.0
 textblob==0.17.1
+tomli==2.0.1
 tqdm==4.66.1
 urllib3==2.1.0
 Werkzeug==3.0.1
