--- a/.github/workflows/data-analyzer.yml
+++ b/.github/workflows/data-analyzer.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2  
       - uses: actions/setup-python@v2  
       - run: |
-          cd data-collector
+          cd data-analyzer
           pip install -r requirements.txt 
           pip install pytest
           pytest
