--- a/data-collector/requirements.txt
+++ b/data-collector/requirements.txt
@@ -13,6 +13,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 packaging==23.2
+pika==1.3.2
 pluggy==1.3.0
 pytest==7.4.3
 requests==2.31.0
